# skpredict

./: .gitignore  LICENSE  Makefile  README.md  README.rst  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: publish-dev.yml  publish-pypi.yml  publish-release.yml  run-tests.yml  test-main.yml
src/skpredict/: __init__.py  lib_linear.py  lib_svm.py  model.py
src/skpredict/svm/: lib_linear.py  lib_svm.py  model.py
tests/svm/: test_linear_svc.py  test_nusvc.py  test_svc.py
