[metadata]
name = skpredict
version = attr: skpredict.__version__
url = https://github.com/mdietrichstein/skpredict
project_urls =
    Documentation = https://github.com/mdietrichstein/skpredict
    Source Code = https://github.com/mdietrichstein/skpredict
    Issue Tracker = https://github.com/mdietrichstein/skpredict/issues/
license = BSD-3-Clause
author = Marc Dietrichstein
author_email = marc@dietrichstein.net
maintainer = Marc Dietrichstein
maintainer_email = marc@dietrichstein.net
description = A simple library for exporting scikit-learn models and running inference on them.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where=src

[options.package_data]
* = *.rst

[tool:pytest]
testpaths = tests

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
max-line-length = 90
